second fix attempt for the blue border issue on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ summary::marker {
     padding-bottom:25px;
   }
 
-  summary{
+  summary:focus{
     outline:none !important;
   }
 
